Fixed some bug by adding overflow hidden to body

--- a/src/App.css
+++ b/src/App.css
@@ -144,7 +144,7 @@ body
   text-decoration: none;
   color: white;
   transition: all 0.3s ease-in-out;
-  font-size: 1.95rem;
+  font-size: 1.35rem;
 }
 
 .nav-link:hover
